# decpys

./: .gitignore  README.md  TODO.md  changelog.md  gendocs.ps1  pytest.ps1  requirements.txt  setup.cfg
decpys/: README.md  __init__.py  _config.py  cascade.py  gui.py  types.py  widgets.py
decpys/core/: __init__.py  dqt.py  qt.py
decpys/gui/: __init__.py  qicon.py
decpys/widgets/: __init__.py  dqlabel.py  qabstractbutton.py  qlabel.py  qpushbutton.py
docs/source/: cascade.rst  conf.py  gui.rst  index.rst  types.rst  widgets.rst
docs/source/core/: core.rst  dqt.rst  qt.rst
docs/source/gui/: gui.rst  qicon.rst
docs/source/widgets/: dqlabel.rst  qabstractbutton.rst  qlabel.rst  qpushbutton.rst  widgets.rst
docs/templates/: class.txt
examples/ClickableButton/: decpys_path.py  main.py
scripts/: README.md  pytest.ps1
tests/: define_pkg_path.py  fixtures.py  test_gui.py  test_import.py  test_widgets.py
tests/core/: define_pkg_path.py  test_qt.py
tests/gui/: define_pkg_path.py  fixtures.py  test_qicon.py
tests/widgets/: define_pkg_path.py  fixtures.py  test_dqlabel.py  test_qabstractbutton.py  test_qlabel.py  test_qpushbutton.py
tests/widgets/icons/: README.md
