[metadata]
name = decpys
version = 0.1.0
author = Mohamed Benzreba
author_email = mbenzreba05@gmail.com
description = A Qt library extension for building declarative programming -style UIs completely within python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mbenzreba.decpys
project_urls =
    Bug Tracker = https://github.com/mbenzreba/decpys/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
license = GPL-2.0-or-later
license_files = LICENSE.txt


[options]
python_requires = >=3.5
install_requires = 
    PySide6==6.2.3
packages = find:
package_dir =
    = .


[upload_sphinx]
upload-dir = doc/build/html

